# pam

./: README.md  pyproject.toml
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
core/: admin.py  forms.py  models.py  views.py
core/migrations/: 0001_initial.py
core/static/: sitemap.txt
core/static/css/: output.css
core/templates/core/: about.html  announcement.html  base.html  index.html  offer.html  offer_user.html  tou.html
core/templates/core/components/: card_offer.html  search_offer.html
core/templates/core/forms/: form_offer.html
core/templatetags/: offer_tags.py
moderation/migrations/: 0001_initial.py
